# pumpos

./: .gitignore  AGENTS.md  PRODUCT.md  README.md  RELEASING.md  package-lock.json  package.json  skills-lock.json  tsconfig.json
.github/workflows/: deploy.yml  desktop-release.yml  migrate.yml
apps/api/: package.json  tsconfig.json  tsconfig.tsbuildinfo  worker-configuration.d.ts  wrangler.toml
apps/console/: index.html  package.json  tsconfig.tsbuildinfo  wrangler.toml
apps/desktop/: index.html  package.json  test_auth.js  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/marketing/: astro.config.mjs  package.json  wrangler.toml
apps/mobile/: index.html  package.json  tsconfig.json  vite.config.ts  wrangler.toml
apps/web/: index.html  package.json  wrangler.toml
docs/: API-HYPERDRIVE-DEPLOYMENT.md  DATA-CACHING.md  PUMP-ERP-DESIGN-SYSTEM.md
docs/initial/: Business Architecture & Operational Model.md  Database Schema Specification (v1.1).md  Design System & Component Inventory (v1).md  Domain Model Specification (v1.1).md  Event Model Specification (v1).md  Implementation Roadmap (v1).md  Permissions & Authorization Matrix (v1).md  Product Packaging & Pricing Strategy (v2).md  Screen Inventory & Navigation Map (v1).md  Technical Architecture Specification.md
docs/roadmap/: README.md  phase-A-auth-users.md  (+12 more)
scripts/: download-fonts.mjs  gen-download-manifest.mjs  release.mjs  switch-env.mjs
(+143 files in other folders)
