[package]
name = "pumpos"
version = "1.0.1"
description = "PumpOS Desktop Shell"
authors = ["DeepMind Team"]
edition = "2021"

[lib]
name = "pumpos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[patch.crates-io]
alloc-no-stdlib = { git = "https://github.com/dropbox/rust-alloc-no-stdlib.git" }
alloc-stdlib = { git = "https://github.com/dropbox/rust-alloc-no-stdlib.git" }
